<resources>
    <string name="x_over_y_complete">%1$d/%2$d Complete</string>
    <string name="parts_scanned">%1$d/%2$d parts scanned.</string>
    <string name="amount_confirmations">%1$s Confirmations</string>
    <string name="account_received_amount">%1$s received %2$s</string>
    <string name="one_confirmation">1 Confirmation</string>
    <string name="about">About</string>
    <string name="about_us">About us</string>
    <string name="account_number">Account %1$d</string>
    <string name="account_account_name_imported">Account %1$s imported</string>
    <string name="account_id_colon">Account ID:</string>
    <string name="account_id_number">Account ID: %1$d</string>
    <string name="account_private_key">Account Private Key</string>
    <string name="account_private_key_colon">Account Private Key:</string>
    <string name="account_public_key">Account Public Key</string>
    <string name="account_public_key_colon">Account Public Key:</string>
    <string name="account_private_key_not_match_imported_account_public_key">Account private key does not match imported account public key</string>
    <string name="account_private_key_missing">Account private key missing</string>
    <string name="accounts">Accounts</string>
    <string name="actions">Actions</string>
    <string name="active_change_addresses">Active Change Addresses</string>
    <string name="active_main_addresses">Active Main Addresses</string>
    <string name="address">Address</string>
    <string name="address_id_colon_number">Address ID %1$d:</string>
    <string name="address_id_colon">Address ID:</string>
    <string name="address_colon">Address: %1$s</string>
    <string name="addresses">Addresses</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="amount">Amount</string>
    <string name="amount_colon">Amount:</string>
    <string name="android_support">Android Support</string>
    <string name="screen_overlay_description">Applications that use screen overlays can fool users into tapping on unseen buttons and potentially steal funds. This warning can be triggered by screen dimming apps. If you are confident that there is no threat you may continue.</string>
    <string name="app_name">ArcBit</string>
    <string name="cannot_use_app_on_this_device">ArcBit Wallet cannot be run on this device.</string>
    <string name="arcbit_brain_wallet">Arcbit Brain Wallet</string>
    <string name="arcbit_web_wallet">Arcbit Web Wallet</string>
    <string name="arcbit_ios_wallet">Arcbit iOS Wallet</string>
    <string name="archive_account">Archive Account</string>
    <string name="archive_address">Archive address</string>
    <string name="archived_accounts">Archived Accounts</string>
    <string name="archived_change_addresses">Archived Change Addresses</string>
    <string name="archived_cold_wallet_accounts">Archived Cold Wallet Accounts</string>
    <string name="archived_imported_accounts">Archived Imported Accounts</string>
    <string name="archived_imported_addresses">Archived Imported Addresses</string>
    <string name="archived_imported_watch_accounts">Archived Imported Watch Accounts</string>
    <string name="archived_imported_watch_addresses">Archived Imported Watch Addresses</string>
    <string name="archived_main_addresses">Archived Main Addresses</string>
    <string name="are_you_sure_you_want_to_archive_account">Are you sure you want to archive account %1$s?</string>
    <string name="are_you_sure_you_want_to_archive_address">Are you sure you want to archive address %1$s?</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want to delete this account?</string>
    <string name="are_you_sure_you_want_to_unarchive_account">Are you sure you want to unarchive account %1$s?</string>
    <string name="are_you_sure_you_want_to_unarchive_address">Are you sure you want to unarchive address %1$s?</string>
    <string name="as_fast_as_possible">As fast as possible</string>
    <string name="authorize_cold_wallet_account_payment">Authorize Cold Wallet Account Payment</string>
    <string name="authorize_payment">Authorize Payment</string>
    <string name="average_15_minutes">Average 15 minute</string>
    <string name="average_30_minutes">Average 30 minute</string>
    <string name="average_60_minutes">Average 60 minute</string>
    <string name="back_up_wallet">Back up wallet</string>
    <string name="backup_passphrase_colon">Backup Passphrase:</string>
    <string name="backup_wallet">Backup wallet</string>
    <string name="bitcoin_unit">Bitcoin Unit</string>
    <string name="block_explorer_api">Block Explorer API</string>
    <string name="block_explorer_api_type">Block Explorer API type</string>
    <string name="block_explorer_url">Block Explorer URL</string>
    <string name="brain_wallet">Brain Wallet</string>
    <string name="request_camera_permission">Camera access is required.</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_archive_your_default_account">Cannot archive your default account</string>
    <string name="cannot_archive_your_one_and_only_account">Cannot archive your one and only account</string>
    <string name="cannot_create_transactions_with_outputs_less_then">Cannot create transactions with outputs less then %1$s</string>
    <string name="cannot_import_reusable_address">Cannot import reusable address</string>
    <string name="no_internet_connection_description">Cannot obtain an Internet connection. Please check the connectivity on your device and try again.</string>
    <string name="cannot_select_custom_url_for_this_block_explorer">Cannot select custom URL for this block explorer</string>
    <string name="change_address_id_colon_number">Change Address ID %1$d:</string>
    <string name="change_pin_code">Change PIN</string>
    <string name="change_address_id_colon">Change address ID:</string>
    <string name="change_block_explorer_url">Change block explorer URL</string>
    <string name="check_out_the_arcbit_brain_wallet">Check out the ArcBit Brain Wallet</string>
    <string name="check_out_the_arcbit_web_wallet">Check out the ArcBit Web Wallet</string>
    <string name="checkout_the_arcbit_web_wallet">Check out the ArcBit Web Wallet!</string>
    <string name="check_out_the_arcbit_ios_wallet">Check out the ArcBit iOS Wallet</string>
    <string name="checking_transaction">Checking Transaction</string>
    <string name="clear_account_private_key_from_memory">Account private key cleared from memory</string>
    <string name="clear_private_key_from_memory">Clear private key from memory</string>
    <string name="cleared_from_memory">Cleared from memory</string>
    <string name="cold_wallet">Cold Wallet</string>
    <string name="cold_wallet_accounts">Cold Wallet Accounts</string>
    <string name="reusable_address_cold_wallet_account_explanation">Cold Wallet Accounts can\'t see reusable address payments, thus this accounts\' reusable address is not available.</string>
    <string name="cold_wallet_overview">Cold Wallet Overview</string>
    <string name="cold_wallet_private_keys_not_store_here">Cold wallet private keys are not stored here and cannot be viewed.</string>
    <string name="complete">Complete</string>
    <string name="complete_step_1">Complete step 1</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="confirmation_time_setting">Confirmation time setting</string>
    <string name="contacts">Contacts</string>
    <string name="continue_capitalize">Continue</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="copy_transaction_id_to_clipboard">Copy Transaction ID to Clipboard</string>
    <string name="create_cold_wallet">Create Cold Wallet</string>
    <string name="create_pin">Create PIN</string>
    <string name="create_new_account">Create new Account</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="created_new_account">Created new account</string>
    <string name="customize">Customize</string>
    <string name="dear_arcbit_support">ArcBit Support,</string>
    <string name="decrypting">Decrypting</string>
    <string name="default_reusable_addresses">Default Reusable Addresses</string>
    <string name="delete_account_name">Delete %1$s</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_address">Delete address</string>
    <string name="delete_contact">Delete contact?</string>
    <string name="disable_pin">Disable PIN</string>
    <string name="display_local_currency">Display local Currency</string>
    <string name="qr_code_address_warning">Do not use the QR code from here to receive bitcoins. Go to the Receive screen to get a QR code to receive bitcoins.</string>
    <string name="ask_to_restore_wallet">Do you want to restore from your backup passphrase or start a new wallet?</string>
    <string name="ask_import_your_account_private_key">Do you want to temporary import your account private key?</string>
    <string name="ask_import_your_private_key">Do you want to temporary import your private key?</string>
    <string name="dont_remind_me">Don\'t remind me</string>
    <string name="done">Done</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawer_open">Drawer open</string>
    <string name="edit_account_name">Edit Account Name</string>
    <string name="edit_contact_name">Edit Contact Name</string>
    <string name="edit_transaction_label">Edit Transaction label</string>
    <string name="edit_label">Edit label</string>
    <string name="email_support">Email Support</string>
    <string name="enable_dynamic_fee">Enable Dynamic Fee</string>
    <string name="enable_pin_code">Enable PIN code</string>
    <string name="enable_pin_code_to_better_secure">Enable PIN code in settings to better secure your wallet.</string>
    <string name="enable_advanced_mode">Enable advanced mode</string>
    <string name="enable_cold_wallet">Enable cold wallet</string>
    <string name="enable_advanced_mode_description">Enabling advanced mode will expose hidden features, including the ability to import bitcoin private keys and addresses. Please note that the backup passphrase cannot recover your bitcoin private keys and addresses, so they should be backed up separately. To see a list of all the advance features, enable advanced mode and go to the Help section.</string>
    <string name="fee">Fee</string>
    <string name="from_colon">From:</string>
    <string name="history">History</string>
    <string name="local_currency">Local Currency</string>
    <string name="master_seed_hex">Master Seed</string>
    <string name="more">More</string>
    <string name="other">Other</string>
    <string name="passphrase">Passphrase</string>
    <string name="preferences">preferences</string>
    <string name="receive">Receive</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="review_payment">Review Payment</string>
    <string name="security">Security</string>
    <string name="dynamic_fee_options">Select Dynamic Fee Option</string>
    <string name="send">Send</string>
    <string name="fixed_fee_amount">Set Fixed Fee Amount</string>
    <string name="settings">Settings</string>
    <string name="show_backup_passphrase">Show Backup Passphrase</string>
    <string name="master_seed_hex_description">The master seed is derived from the passphrase. If you want to import Bitcoins into another wallet, and if that other wallets don\'t use BIP39, then it\'s possible to import the Bitcoins using the master seed hex as long as they support BIP44.</string>
    <string name="to_colon">To:</string>
    <string name="total">Total</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="wallet_backup_passphrase">Wallet backup passphrase</string>
</resources>