<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layoutTitle"
        android:background="#24abdc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passphrase"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/Passphrase" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arcbit_arrow_left"
            android:textColor="#fff"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:id="@+id/backImageButton" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/wallet_backup_passphrase"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/passphrase_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:gravity="center"
            android:textColor="#000"
            android:id="@+id/passphrase_description"
            android:layout_below="@+id/passphrase_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passphrase_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:textColor="#fff"
            android:textSize="16sp"
            android:gravity="center"
            android:id="@+id/passphrase"
            android:background="@drawable/roundshape"
            android:padding="4dp">

        </TextView>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/master_seed_hex"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/master_seed_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:gravity="center"
            android:text="@string/master_seed_hex_description"
            android:textColor="#000"
            android:id="@+id/master_seed_description"
            android:layout_below="@+id/master_seed_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/master_seed_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:textColor="#fff"
            android:textSize="16sp"
            android:gravity="center"
            android:id="@+id/master_seed"
            android:background="@drawable/roundshape"
            android:padding="8dp">

        </TextView>
    </RelativeLayout>

</LinearLayout>
