<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_payment"
                android:padding="8dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textSize="24sp"/>
            <ImageView
                android:id="@+id/confirm_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_alignParentLeft="true"
                android:tint="@color/black"
                android:src="@drawable/ic_arcbit_cross"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/from_colon"
                    android:id="@+id/from_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/from_label"
                    android:textSize="16sp"
                    android:id="@+id/confirm_from_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/confirm_from_label"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/to_colon"
                    android:id="@+id/to_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/to_label"
                    android:textSize="16sp"
                    android:id="@+id/confirm_to_label"/>

            </RelativeLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>
                <TextView
                    android:id="@+id/confirm_amount_btc_unit"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>
                <TextView
                    android:id="@+id/confirm_amount_fiat_unit"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="start"/>
                <TextView
                    android:id="@+id/confirm_amount_btc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:gravity="end"/>
                <TextView
                    android:id="@+id/confirm_amount_fiat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="14sp"
                    android:gravity="end"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/fee"
                    android:gravity="start"/>
                <LinearLayout android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/confirm_fee_btc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/tv_customize_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:textColor="@color/arcbit_main"
                        android:textSize="14sp"
                        android:text="@string/customize"/>
                </LinearLayout>
                <LinearLayout android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/confirm_fee_fiat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="8dp"
                        android:textSize="14dp"/>
                    <ImageView
                        android:id="@+id/iv_fee_info"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center_horizontal|start"
                        android:tint="@color/arcbit_main"
                        android:src="@drawable/ic_arcbit_question"/>
                </LinearLayout>
            </LinearLayout>

            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/grey"/>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="start"/>
                <TextView
                    android:id="@+id/confirm_total_btc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:gravity="end"/>
                <TextView
                    android:id="@+id/confirm_total_fiat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="14sp"
                    android:gravity="end"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/confirm_send"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:background="@drawable/roundshape"
            android:textColor="@color/white"
            android:text="@string/send"/>

    </LinearLayout>
</ScrollView>